# ChadServr

./: .gitignore  CMakeLists.txt  README.md  build.sh  main  main.cpp
config/: server_config.json
include/: config.hpp  http_server.hpp  logger.hpp  storage_manager.hpp  thread_pool.hpp  video_processor.hpp
src/: config.cpp  http_server.cpp  logger.cpp  storage_manager.cpp  thread_pool.cpp  video_processor.cpp
